@@ -20,7 +20,7 @@ import org.apache.kafka.clients.CommonClientConfigs;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.MockConsumer;
-import org.apache.kafka.clients.consumer.OffsetResetStrategy;
+import org.apache.kafka.clients.consumer.internals.AutoOffsetResetStrategy;
 import org.apache.kafka.clients.producer.KafkaProducer;
 import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.clients.producer.ProducerRecord;
@@ -51,7 +51,6 @@ import org.mockito.quality.Strictness;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -100,7 +99,7 @@ public class KafkaBasedLogTest {
         CONSUMER_PROPS.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.StringDeserializer");
     }
 
-    private static final Set<TopicPartition> CONSUMER_ASSIGNMENT = new HashSet<>(Arrays.asList(TP0, TP1));
+    private static final Set<TopicPartition> CONSUMER_ASSIGNMENT = Set.of(TP0, TP1);
     private static final Map<String, String> FIRST_SET = new HashMap<>();
     static {
         FIRST_SET.put("key", "value");
@@ -141,7 +140,7 @@ public class KafkaBasedLogTest {
 
     @BeforeEach
     public void setUp() {
-        store = new KafkaBasedLog<String, String>(TOPIC, PRODUCER_PROPS, CONSUMER_PROPS, topicAdminSupplier, consumedCallback, time, initializer) {
+        store = new KafkaBasedLog<>(TOPIC, PRODUCER_PROPS, CONSUMER_PROPS, topicAdminSupplier, consumedCallback, time, initializer) {
             @Override
             protected KafkaProducer<String, String> createProducer() {
                 return producer;
@@ -152,7 +151,7 @@ public class KafkaBasedLogTest {
                 return consumer;
             }
         };
-        consumer = new MockConsumer<>(OffsetResetStrategy.EARLIEST);
+        consumer = new MockConsumer<>(AutoOffsetResetStrategy.EARLIEST.name());
         consumer.updatePartitions(TOPIC, Arrays.asList(TPINFO0, TPINFO1));
         Map<TopicPartition, Long> beginningOffsets = new HashMap<>();
         beginningOffsets.put(TP0, 0L);
@@ -408,7 +407,7 @@ public class KafkaBasedLogTest {
     @Test
     public void testOffsetReadFailureWhenWorkThreadFails() throws Exception {
         RuntimeException exception = new RuntimeException();
-        Set<TopicPartition> tps = new HashSet<>(Arrays.asList(TP0, TP1));
+        Set<TopicPartition> tps = Set.of(TP0, TP1);
         Map<TopicPartition, Long> endOffsets = new HashMap<>();
         endOffsets.put(TP0, 0L);
         endOffsets.put(TP1, 0L);
@@ -482,7 +481,7 @@ public class KafkaBasedLogTest {
 
     @Test
     public void testReadEndOffsetsUsingAdmin() {
-        Set<TopicPartition> tps = new HashSet<>(Arrays.asList(TP0, TP1));
+        Set<TopicPartition> tps = Set.of(TP0, TP1);
         Map<TopicPartition, Long> endOffsets = new HashMap<>();
         endOffsets.put(TP0, 0L);
         endOffsets.put(TP1, 0L);
@@ -498,7 +497,7 @@ public class KafkaBasedLogTest {
 
     @Test
     public void testReadEndOffsetsUsingAdminThatFailsWithUnsupported() {
-        Set<TopicPartition> tps = new HashSet<>(Arrays.asList(TP0, TP1));
+        Set<TopicPartition> tps = Set.of(TP0, TP1);
         admin = mock(TopicAdmin.class);
         // Getting end offsets using the admin client should fail with unsupported version
         when(admin.retryEndOffsets(eq(tps), any(), anyLong())).thenThrow(new UnsupportedVersionException("too old"));
@@ -516,7 +515,7 @@ public class KafkaBasedLogTest {
 
     @Test
     public void testReadEndOffsetsUsingAdminThatFailsWithRetriable() {
-        Set<TopicPartition> tps = new HashSet<>(Arrays.asList(TP0, TP1));
+        Set<TopicPartition> tps = Set.of(TP0, TP1);
         Map<TopicPartition, Long> endOffsets = new HashMap<>();
         endOffsets.put(TP0, 0L);
         endOffsets.put(TP1, 0L);
