@@ -26,7 +26,6 @@ import org.apache.kafka.coordinator.group.modern.MemberAssignmentImpl;
 import org.apache.kafka.server.common.TopicIdPartition;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -49,17 +48,6 @@ import java.util.Set;
  *      Balance > Stickiness.
  */
 public class UniformHomogeneousAssignmentBuilder {
-    private static final Class<?> UNMODIFIABLE_MAP_CLASS = Collections.unmodifiableMap(new HashMap<>()).getClass();
-    private static final Class<?> EMPTY_MAP_CLASS = Collections.emptyMap().getClass();
-
-    /**
-     * @return True if the provided map is an UnmodifiableMap or EmptyMap. Those classes are not
-     * public hence we cannot use the `instanceof` operator.
-     */
-    private static boolean isImmutableMap(Map<?, ?> map) {
-        return UNMODIFIABLE_MAP_CLASS.isInstance(map) || EMPTY_MAP_CLASS.isInstance(map);
-    }
-
     /**
      * The assignment specification which includes member metadata.
      */
@@ -120,7 +108,7 @@ public class UniformHomogeneousAssignmentBuilder {
      */
     public GroupAssignment build() throws PartitionAssignorException {
         if (subscribedTopicIds.isEmpty()) {
-            return new GroupAssignment(Collections.emptyMap());
+            return new GroupAssignment(Map.of());
         }
 
         // Compute the list of unassigned partitions.
@@ -164,21 +152,27 @@ public class UniformHomogeneousAssignmentBuilder {
      * This method ensures that the original assignment is not copied if it is not
      * altered.
      */
+    @SuppressWarnings({"CyclomaticComplexity", "NPathComplexity"})
     private void maybeRevokePartitions() {
+        int memberCount = groupSpec.memberIds().size();
+        int memberIndex = -1;
         for (String memberId : groupSpec.memberIds()) {
+            memberIndex++;
+
             Map<Uuid, Set<Integer>> oldAssignment = groupSpec.memberAssignment(memberId).partitions();
             Map<Uuid, Set<Integer>> newAssignment = null;
 
             // The assignor expects to receive the assignment as an immutable map. It leverages
             // this knowledge in order to avoid having to copy all assignments.
-            if (!isImmutableMap(oldAssignment)) {
+            if (!AssignorHelpers.isImmutableMap(oldAssignment)) {
                 throw new IllegalStateException("The assignor expect an immutable map.");
             }
 
             int quota = minimumMemberQuota;
+            boolean quotaHasExtraPartition = false;
             if (remainingMembersToGetAnExtraPartition > 0) {
                 quota++;
-                remainingMembersToGetAnExtraPartition--;
+                quotaHasExtraPartition = true;
             }
 
             for (Map.Entry<Uuid, Set<Integer>> topicPartitions : oldAssignment.entrySet()) {
@@ -196,7 +190,7 @@ public class UniformHomogeneousAssignmentBuilder {
                                 if (newAssignment == null) {
                                     // If the new assignment is null, we create a deep copy of the
                                     // original assignment so that we can alter it.
-                                    newAssignment = deepCopy(oldAssignment);
+                                    newAssignment = AssignorHelpers.deepCopyAssignment(oldAssignment);
                                 }
                                 // Remove the partition from the new assignment.
                                 Set<Integer> parts = newAssignment.get(topicId);
@@ -213,15 +207,29 @@ public class UniformHomogeneousAssignmentBuilder {
                     if (newAssignment == null) {
                         // If the new assignment is null, we create a deep copy of the
                         // original assignment so that we can alter it.
-                        newAssignment = deepCopy(oldAssignment);
+                        newAssignment = AssignorHelpers.deepCopyAssignment(oldAssignment);
                     }
                     // Remove the entire topic.
                     newAssignment.remove(topicId);
                 }
             }
 
+            if (quota > 0 &&
+                quotaHasExtraPartition &&
+                memberCount - memberIndex > remainingMembersToGetAnExtraPartition) {
+                // Give up the extra partition quota for another member to claim,
+                // unless this member is one of the last remainingMembersToGetAnExtraPartition
+                // members in the list and must take the extra partition.
+                quota--;
+                quotaHasExtraPartition = false;
+            }
+
             if (quota > 0) {
                 unfilledMembers.add(new MemberWithRemainingQuota(memberId, quota));
+            }
+
+            if (quotaHasExtraPartition) {
+                remainingMembersToGetAnExtraPartition--;
             }
 
             if (newAssignment == null) {
@@ -243,10 +251,10 @@ public class UniformHomogeneousAssignmentBuilder {
             int remainingQuota = unfilledMember.remainingQuota;
 
             Map<Uuid, Set<Integer>> newAssignment = targetAssignment.get(memberId).partitions();
-            if (isImmutableMap(newAssignment)) {
+            if (AssignorHelpers.isImmutableMap(newAssignment)) {
                 // If the new assignment is immutable, we must create a deep copy of it
                 // before altering it.
-                newAssignment = deepCopy(newAssignment);
+                newAssignment = AssignorHelpers.deepCopyAssignment(newAssignment);
                 targetAssignment.put(memberId, new MemberAssignmentImpl(newAssignment));
             }
 
@@ -264,24 +272,6 @@ public class UniformHomogeneousAssignmentBuilder {
         }
     }
 
-    private static Map<Uuid, Set<Integer>> deepCopy(Map<Uuid, Set<Integer>> map) {
-        Map<Uuid, Set<Integer>> copy = new HashMap<>(map.size());
-        for (Map.Entry<Uuid, Set<Integer>> entry : map.entrySet()) {
-            copy.put(entry.getKey(), new HashSet<>(entry.getValue()));
-        }
-        return copy;
-    }
-
-    private static class MemberWithRemainingQuota {
-        final String memberId;
-        final int remainingQuota;
-
-        MemberWithRemainingQuota(
-            String memberId,
-            int remainingQuota
-        ) {
-            this.memberId = memberId;
-            this.remainingQuota = remainingQuota;
-        }
+    private record MemberWithRemainingQuota(String memberId, int remainingQuota) {
     }
 }
