@@ -22,7 +22,6 @@ import org.apache.kafka.server.share.persister.PersisterStateBatch;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.stream.Stream;
@@ -70,7 +69,7 @@ public class PersisterStateBatchCombinerTest {
             int deliveryState,
             int deliveryCount
         ) {
-            return Collections.singletonList(
+            return List.of(
                 new PersisterStateBatch(firstOffset, lastOffset, (byte) deliveryState, (short) deliveryCount)
             );
         }
@@ -108,14 +107,14 @@ public class PersisterStateBatchCombinerTest {
             new BatchTestHolder(
                 "Current batches with start offset midway are pruned.",
                 BatchTestHolder.singleBatch(100, 130, 0, 1),
-                Collections.emptyList(),
+                List.of(),
                 BatchTestHolder.singleBatch(120, 130, 0, 1),
                 120
             ),
 
             new BatchTestHolder(
                 "New batches with start offset midway are pruned.",
-                Collections.emptyList(),
+                List.of(),
                 BatchTestHolder.singleBatch(100, 130, 0, 1),
                 BatchTestHolder.singleBatch(120, 130, 0, 1),
                 120
@@ -123,9 +122,9 @@ public class PersisterStateBatchCombinerTest {
 
             new BatchTestHolder(
                 "Both current and new batches empty.",
-                Collections.emptyList(),
-                Collections.emptyList(),
-                Collections.emptyList(),
+                List.of(),
+                List.of(),
+                List.of(),
                 120
             )
         );
