@@ -24,6 +24,7 @@ import org.apache.kafka.common.record.EndTransactionMarker;
 import org.apache.kafka.common.record.FileLogInputStream;
 import org.apache.kafka.common.record.FileRecords;
 import org.apache.kafka.common.record.MemoryRecords;
+import org.apache.kafka.common.record.MemoryRecordsBuilder;
 import org.apache.kafka.common.record.Record;
 import org.apache.kafka.common.record.RecordBatch;
 import org.apache.kafka.common.record.Records;
@@ -32,7 +33,6 @@ import org.apache.kafka.common.record.TimestampType;
 import org.apache.kafka.common.utils.MockTime;
 import org.apache.kafka.common.utils.Time;
 import org.apache.kafka.common.utils.Utils;
-import org.apache.kafka.coordinator.transaction.TransactionLogConfig;
 import org.apache.kafka.server.util.MockScheduler;
 import org.apache.kafka.storage.internals.checkpoint.LeaderEpochCheckpointFile;
 import org.apache.kafka.storage.internals.epoch.LeaderEpochFileCache;
@@ -41,6 +41,7 @@ import org.apache.kafka.test.TestUtils;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.ValueSource;
@@ -48,15 +49,19 @@ import org.junit.jupiter.params.provider.ValueSource;
 import java.io.File;
 import java.io.IOException;
 import java.io.RandomAccessFile;
+import java.nio.ByteBuffer;
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalLong;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -65,7 +70,11 @@ import static org.junit.jupiter.api.Assertions.assertIterableEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.clearInvocations;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 public class LogSegmentTest {
@@ -93,7 +102,7 @@ public class LogSegmentTest {
     }
 
     /* Create a ByteBufferMessageSet for the given messages starting from the given offset */
-    private MemoryRecords records(long offset, String... records) {
+    private MemoryRecords v1Records(long offset, String... records) {
         List<SimpleRecord> simpleRecords = new ArrayList<>();
         for (String s : records) {
             simpleRecords.add(new SimpleRecord(offset * 10, s.getBytes()));
@@ -101,6 +110,16 @@ public class LogSegmentTest {
         return MemoryRecords.withRecords(
             RecordBatch.MAGIC_VALUE_V1, offset,
             Compression.NONE, TimestampType.CREATE_TIME, simpleRecords.toArray(new SimpleRecord[0]));
+    }
+
+    private MemoryRecords v2Records(long offset, String... records) {
+        List<SimpleRecord> simpleRecords = new ArrayList<>();
+        for (String s : records) {
+            simpleRecords.add(new SimpleRecord(offset * 10, s.getBytes()));
+        }
+        return MemoryRecords.withRecords(
+                RecordBatch.MAGIC_VALUE_V2, offset,
+                Compression.NONE, TimestampType.CREATE_TIME, simpleRecords.toArray(new SimpleRecord[0]));
     }
 
     @BeforeEach
@@ -133,9 +152,8 @@ public class LogSegmentTest {
     })
     public void testAppendForLogSegmentOffsetOverflowException(long baseOffset, long largestOffset) throws IOException {
         try (LogSegment seg = createSegment(baseOffset, 10, Time.SYSTEM)) {
-            long currentTime = Time.SYSTEM.milliseconds();
-            MemoryRecords memoryRecords = records(0, "hello");
-            assertThrows(LogSegmentOffsetOverflowException.class, () -> seg.append(largestOffset, currentTime, largestOffset, memoryRecords));
+            MemoryRecords memoryRecords = v1Records(0, "hello");
+            assertThrows(LogSegmentOffsetOverflowException.class, () -> seg.append(largestOffset, memoryRecords));
         }
     }
 
@@ -157,10 +175,25 @@ public class LogSegmentTest {
     @Test
     public void testReadBeforeFirstOffset() throws IOException {
         try (LogSegment seg = createSegment(40)) {
-            MemoryRecords ms = records(50, "hello", "there", "little", "bee");
-            seg.append(53, RecordBatch.NO_TIMESTAMP, -1L, ms);
+            MemoryRecords ms = v1Records(50, "hello", "there", "little", "bee");
+            seg.append(53, ms);
             Records read = seg.read(41, 300).records;
             checkEquals(ms.records().iterator(), read.records().iterator());
+        }
+    }
+
+    /**
+     * Reading from an offset in the middle of a batch should return a
+     * LogOffsetMetadata offset that points to the batch's base offset
+     */
+    @Test
+    public void testReadFromMiddleOfBatch() throws IOException {
+        long batchBaseOffset = 50;
+        try (LogSegment seg = createSegment(40)) {
+            MemoryRecords ms = v2Records(batchBaseOffset, "hello", "there", "little", "bee");
+            seg.append(53, ms);
+            FetchDataInfo readInfo = seg.read(52, 300);
+            assertEquals(batchBaseOffset, readInfo.fetchOffsetMetadata.messageOffset);
         }
     }
 
@@ -170,8 +203,8 @@ public class LogSegmentTest {
     @Test
     public void testReadAfterLast() throws IOException {
         try (LogSegment seg = createSegment(40)) {
-            MemoryRecords ms = records(50, "hello", "there");
-            seg.append(51, RecordBatch.NO_TIMESTAMP, -1L, ms);
+            MemoryRecords ms = v1Records(50, "hello", "there");
+            seg.append(51, ms);
             FetchDataInfo read = seg.read(52, 200);
             assertNull(read, "Read beyond the last offset in the segment should give null");
         }
@@ -184,10 +217,10 @@ public class LogSegmentTest {
     @Test
     public void testReadFromGap() throws IOException {
         try (LogSegment seg = createSegment(40)) {
-            MemoryRecords ms = records(50, "hello", "there");
-            seg.append(51, RecordBatch.NO_TIMESTAMP, -1L, ms);
-            MemoryRecords ms2 = records(60, "alpha", "beta");
-            seg.append(61, RecordBatch.NO_TIMESTAMP, -1L, ms2);
+            MemoryRecords ms = v1Records(50, "hello", "there");
+            seg.append(51, ms);
+            MemoryRecords ms2 = v1Records(60, "alpha", "beta");
+            seg.append(61, ms2);
             FetchDataInfo read = seg.read(55, 200);
             checkEquals(ms2.records().iterator(), read.records.records().iterator());
         }
@@ -199,16 +232,11 @@ public class LogSegmentTest {
         Optional<Long> maxPosition = Optional.empty();
         int maxSize = 1;
         try (LogSegment seg = createSegment(40)) {
-            MemoryRecords ms = records(50, "hello", "there");
-            seg.append(51, RecordBatch.NO_TIMESTAMP, -1L, ms);
-
-            // read before first offset
-            FetchDataInfo read = seg.read(48, maxSize, maxPosition, minOneMessage);
-            assertEquals(new LogOffsetMetadata(48, 40, 0), read.fetchOffsetMetadata);
-            assertFalse(read.records.records().iterator().hasNext());
+            MemoryRecords ms = v1Records(50, "hello", "there");
+            seg.append(51, ms);
 
             // read at first offset
-            read = seg.read(50, maxSize, maxPosition, minOneMessage);
+            FetchDataInfo read = seg.read(50, maxSize, maxPosition, minOneMessage);
             assertEquals(new LogOffsetMetadata(50, 40, 0), read.fetchOffsetMetadata);
             assertFalse(read.records.records().iterator().hasNext());
 
@@ -236,14 +264,14 @@ public class LogSegmentTest {
         try (LogSegment seg = createSegment(40)) {
             long offset = 40;
             for (int i = 0; i < 30; i++) {
-                MemoryRecords ms1 = records(offset, "hello");
-                seg.append(offset, RecordBatch.NO_TIMESTAMP, -1L, ms1);
-                MemoryRecords ms2 = records(offset + 1, "hello");
-                seg.append(offset + 1, RecordBatch.NO_TIMESTAMP, -1L, ms2);
+                MemoryRecords ms1 = v1Records(offset, "hello");
+                seg.append(offset, ms1);
+                MemoryRecords ms2 = v1Records(offset + 1, "hello");
+                seg.append(offset + 1, ms2);
 
                 // check that we can read back both messages
                 FetchDataInfo read = seg.read(offset, 10000);
-                assertIterableEquals(Arrays.asList(ms1.records().iterator().next(), ms2.records().iterator().next()), read.records.records());
+                assertIterableEquals(List.of(ms1.records().iterator().next(), ms2.records().iterator().next()), read.records.records());
 
                 // Now truncate off the last message
                 seg.truncateTo(offset + 1);
@@ -297,10 +325,10 @@ public class LogSegmentTest {
     @Test
     public void testReloadLargestTimestampAndNextOffsetAfterTruncation() throws IOException {
         int numMessages = 30;
-        try (LogSegment seg = createSegment(40, 2 * records(0, "hello").sizeInBytes() - 1)) {
+        try (LogSegment seg = createSegment(40, 2 * v1Records(0, "hello").sizeInBytes() - 1)) {
             int offset = 40;
             for (int i = 0; i < numMessages; i++) {
-                seg.append(offset, offset, offset, records(offset, "hello"));
+                seg.append(offset, v1Records(offset, "hello"));
                 offset++;
             }
             assertEquals(offset, seg.readNextOffset());
@@ -323,7 +351,12 @@ public class LogSegmentTest {
         MockTime time = new MockTime();
         try (LogSegment seg = createSegment(40, time)) {
 
-            seg.append(41, RecordBatch.NO_TIMESTAMP, -1L, records(40, "hello", "there"));
+            seg.append(41,
+                MemoryRecords.withRecords(RecordBatch.MAGIC_VALUE_V1, 40, Compression.NONE, TimestampType.CREATE_TIME,
+                    List.of(
+                        new SimpleRecord("hello".getBytes()),
+                        new SimpleRecord("there".getBytes())
+                    ).toArray(new SimpleRecord[0])));
 
             // If the segment is empty after truncation, the create time should be reset
             time.sleep(500);
@@ -335,7 +368,7 @@ public class LogSegmentTest {
             assertFalse(seg.offsetIndex().isFull());
             assertNull(seg.read(0, 1024), "Segment should be empty.");
 
-            seg.append(41, RecordBatch.NO_TIMESTAMP, -1L, records(40, "hello", "there"));
+            seg.append(41, v1Records(40, "hello", "there"));
         }
     }
 
@@ -344,11 +377,11 @@ public class LogSegmentTest {
      */
     @Test
     public void testFindOffsetByTimestamp() throws IOException {
-        int messageSize = records(0, "msg00").sizeInBytes();
+        int messageSize = v1Records(0, "msg00").sizeInBytes();
         try (LogSegment seg = createSegment(40, messageSize * 2 - 1)) {
             // Produce some messages
             for (int i = 40; i < 50; i++) {
-                seg.append(i, i * 10, i, records(i, "msg" + i));
+                seg.append(i, v1Records(i, "msg" + i));
             }
 
             assertEquals(490, seg.largestTimestamp());
@@ -374,7 +407,7 @@ public class LogSegmentTest {
     public void testNextOffsetCalculation() throws IOException {
         try (LogSegment seg = createSegment(40)) {
             assertEquals(40, seg.readNextOffset());
-            seg.append(52, RecordBatch.NO_TIMESTAMP, -1L, records(50, "hello", "there", "you"));
+            seg.append(52, v1Records(50, "hello", "there", "you"));
             assertEquals(53, seg.readNextOffset());
         }
     }
@@ -417,11 +450,11 @@ public class LogSegmentTest {
     public void testRecoveryFixesCorruptIndex() throws Exception {
         try (LogSegment seg = createSegment(0)) {
             for (int i = 0; i < 100; i++) {
-                seg.append(i, RecordBatch.NO_TIMESTAMP, -1L, records(i, Integer.toString(i)));
+                seg.append(i, v1Records(i, Integer.toString(i)));
             }
             File indexFile = seg.offsetIndexFile();
             writeNonsenseToFile(indexFile, 5, (int) indexFile.length());
-            seg.recover(newProducerStateManager(), Optional.empty());
+            seg.recover(newProducerStateManager(), mock(LeaderEpochFileCache.class));
             for (int i = 0; i < 100; i++) {
                 Iterable<Record> records = seg.read(i, 1, Optional.of((long) seg.size()), true).records.records();
                 assertEquals(i, records.iterator().next().offset());
@@ -440,30 +473,30 @@ public class LogSegmentTest {
             long pid2 = 10L;
 
             // append transactional records from pid1
-            segment.append(101L, RecordBatch.NO_TIMESTAMP,
-                100L, MemoryRecords.withTransactionalRecords(100L, Compression.NONE,
+            segment.append(101L,
+                MemoryRecords.withTransactionalRecords(100L, Compression.NONE,
                     pid1, producerEpoch, sequence, partitionLeaderEpoch, new SimpleRecord("a".getBytes()), new SimpleRecord("b".getBytes())));
 
             // append transactional records from pid2
-            segment.append(103L, RecordBatch.NO_TIMESTAMP,
-                102L, MemoryRecords.withTransactionalRecords(102L, Compression.NONE,
+            segment.append(103L,
+                MemoryRecords.withTransactionalRecords(102L, Compression.NONE,
                     pid2, producerEpoch, sequence, partitionLeaderEpoch, new SimpleRecord("a".getBytes()), new SimpleRecord("b".getBytes())));
 
             // append non-transactional records
-            segment.append(105L, RecordBatch.NO_TIMESTAMP,
-                104L, MemoryRecords.withRecords(104L, Compression.NONE,
+            segment.append(105L,
+                MemoryRecords.withRecords(104L, Compression.NONE,
                     partitionLeaderEpoch, new SimpleRecord("a".getBytes()), new SimpleRecord("b".getBytes())));
 
             // abort the transaction from pid2
-            segment.append(106L, RecordBatch.NO_TIMESTAMP,
-                106L, endTxnRecords(ControlRecordType.ABORT, pid2, producerEpoch, 106L));
+            segment.append(106L,
+                endTxnRecords(ControlRecordType.ABORT, pid2, producerEpoch, 106L));
 
             // commit the transaction from pid1
-            segment.append(107L, RecordBatch.NO_TIMESTAMP,
-                107L, endTxnRecords(ControlRecordType.COMMIT, pid1, producerEpoch, 107L));
+            segment.append(107L,
+                endTxnRecords(ControlRecordType.COMMIT, pid1, producerEpoch, 107L));
 
             ProducerStateManager stateManager = newProducerStateManager();
-            segment.recover(stateManager, Optional.empty());
+            segment.recover(stateManager, mock(LeaderEpochFileCache.class));
             assertEquals(108L, stateManager.mapEndOffset());
 
             List<AbortedTxn> abortedTxns = segment.txnIndex().allAbortedTxns();
@@ -479,7 +512,7 @@ public class LogSegmentTest {
             stateManager.loadProducerEntry(new ProducerStateEntry(pid2, producerEpoch, 0,
                 RecordBatch.NO_TIMESTAMP, OptionalLong.of(75L),
                 Optional.of(new BatchMetadata(10, 10L, 5, RecordBatch.NO_TIMESTAMP))));
-            segment.recover(stateManager, Optional.empty());
+            segment.recover(stateManager, mock(LeaderEpochFileCache.class));
             assertEquals(108L, stateManager.mapEndOffset());
 
             abortedTxns = segment.txnIndex().allAbortedTxns();
@@ -502,20 +535,20 @@ public class LogSegmentTest {
             LeaderEpochCheckpointFile checkpoint = new LeaderEpochCheckpointFile(TestUtils.tempFile(), new LogDirFailureChannel(1));
 
             LeaderEpochFileCache cache = new LeaderEpochFileCache(topicPartition, checkpoint, new MockScheduler(new MockTime()));
-            seg.append(105L, RecordBatch.NO_TIMESTAMP, 104L, MemoryRecords.withRecords(104L, Compression.NONE, 0,
+            seg.append(105L, MemoryRecords.withRecords(104L, Compression.NONE, 0,
                 new SimpleRecord("a".getBytes()), new SimpleRecord("b".getBytes())));
 
-            seg.append(107L, RecordBatch.NO_TIMESTAMP, 106L, MemoryRecords.withRecords(106L, Compression.NONE, 1,
+            seg.append(107L, MemoryRecords.withRecords(106L, Compression.NONE, 1,
                 new SimpleRecord("a".getBytes()), new SimpleRecord("b".getBytes())));
 
-            seg.append(109L, RecordBatch.NO_TIMESTAMP, 108L, MemoryRecords.withRecords(108L, Compression.NONE, 1,
+            seg.append(109L, MemoryRecords.withRecords(108L, Compression.NONE, 1,
                 new SimpleRecord("a".getBytes()), new SimpleRecord("b".getBytes())));
 
-            seg.append(111L, RecordBatch.NO_TIMESTAMP, 110L, MemoryRecords.withRecords(110L, Compression.NONE, 2,
+            seg.append(111L, MemoryRecords.withRecords(110L, Compression.NONE, 2,
                 new SimpleRecord("a".getBytes()), new SimpleRecord("b".getBytes())));
 
-            seg.recover(newProducerStateManager(), Optional.of(cache));
-            assertEquals(Arrays.asList(
+            seg.recover(newProducerStateManager(), cache);
+            assertEquals(List.of(
                 new EpochEntry(0, 104L),
                 new EpochEntry(1, 106L),
                 new EpochEntry(2, 110L)), cache.epochEntries());
@@ -547,11 +580,11 @@ public class LogSegmentTest {
     public void testRecoveryFixesCorruptTimeIndex() throws IOException {
         try (LogSegment seg = createSegment(0)) {
             for (int i = 0; i < 100; i++) {
-                seg.append(i, i * 10, i, records(i, String.valueOf(i)));
+                seg.append(i, v1Records(i, String.valueOf(i)));
             }
             File timeIndexFile = seg.timeIndexFile();
             writeNonsenseToFile(timeIndexFile, 5, (int) timeIndexFile.length());
-            seg.recover(newProducerStateManager(), Optional.empty());
+            seg.recover(newProducerStateManager(), mock(LeaderEpochFileCache.class));
             for (int i = 0; i < 100; i++) {
                 assertEquals(i, seg.findOffsetByTimestamp(i * 10, 0L).get().offset);
                 if (i < 99) {
@@ -570,15 +603,15 @@ public class LogSegmentTest {
         for (int ignore = 0; ignore < 10; ignore++) {
             try (LogSegment seg = createSegment(0)) {
                 for (int i = 0; i < messagesAppended; i++) {
-                    seg.append(i, RecordBatch.NO_TIMESTAMP, -1L, records(i, String.valueOf(i)));
+                    seg.append(i, v1Records(i, String.valueOf(i)));
                 }
                 int offsetToBeginCorruption = TestUtils.RANDOM.nextInt(messagesAppended);
                 // start corrupting somewhere in the middle of the chosen record all the way to the end
 
-                FileRecords.LogOffsetPosition recordPosition = seg.log().searchForOffsetWithSize(offsetToBeginCorruption, 0);
+                FileRecords.LogOffsetPosition recordPosition = seg.log().searchForOffsetFromPosition(offsetToBeginCorruption, 0);
                 int position = recordPosition.position + TestUtils.RANDOM.nextInt(15);
                 writeNonsenseToFile(seg.log().file(), position, (int) (seg.log().file().length() - position));
-                seg.recover(newProducerStateManager(), Optional.empty());
+                seg.recover(newProducerStateManager(), mock(LeaderEpochFileCache.class));
 
                 List<Long> expectList = new ArrayList<>();
                 for (long j = 0; j < offsetToBeginCorruption; j++) {
@@ -606,10 +639,10 @@ public class LogSegmentTest {
         try (LogSegment seg = LogSegment.open(tempDir, 40, logConfig, Time.SYSTEM, false,
             512 * 1024 * 1024, true, "")) {
             segments.add(seg);
-            MemoryRecords ms = records(50, "hello", "there");
-            seg.append(51, RecordBatch.NO_TIMESTAMP, -1L, ms);
-            MemoryRecords ms2 = records(60, "alpha", "beta");
-            seg.append(61, RecordBatch.NO_TIMESTAMP, -1L, ms2);
+            MemoryRecords ms = v1Records(50, "hello", "there");
+            seg.append(51, ms);
+            MemoryRecords ms2 = v1Records(60, "alpha", "beta");
+            seg.append(61, ms2);
             FetchDataInfo read = seg.read(55, 200);
             checkEquals(ms2.records().iterator(), read.records.records().iterator());
         }
@@ -629,10 +662,10 @@ public class LogSegmentTest {
         LogConfig logConfig = new LogConfig(configMap);
 
         try (LogSegment seg = LogSegment.open(tempDir, 40, logConfig, Time.SYSTEM, 512 * 1024 * 1024, true)) {
-            MemoryRecords ms = records(50, "hello", "there");
-            seg.append(51, RecordBatch.NO_TIMESTAMP, -1L, ms);
-            MemoryRecords ms2 = records(60, "alpha", "beta");
-            seg.append(61, RecordBatch.NO_TIMESTAMP, -1L, ms2);
+            MemoryRecords ms = v1Records(50, "hello", "there");
+            seg.append(51, ms);
+            MemoryRecords ms2 = v1Records(60, "alpha", "beta");
+            seg.append(61, ms2);
             FetchDataInfo read = seg.read(55, 200);
             checkEquals(ms2.records().iterator(), read.records.records().iterator());
             long oldSize = seg.log().sizeInBytes();
@@ -670,9 +703,9 @@ public class LogSegmentTest {
 
             // Given two messages with a gap between them (e.g. mid offset compacted away)
             MemoryRecords ms1 = recordsForTruncateEven(offset, "first message");
-            seg.append(offset, RecordBatch.NO_TIMESTAMP, -1L, ms1);
+            seg.append(offset, ms1);
             MemoryRecords ms2 = recordsForTruncateEven(offset + 3, "message after gap");
-            seg.append(offset + 3, RecordBatch.NO_TIMESTAMP, -1L, ms2);
+            seg.append(offset + 3, ms2);
 
             // When we truncate to an offset without a corresponding log entry
             seg.truncateTo(offset + 1);
@@ -685,7 +718,7 @@ public class LogSegmentTest {
         }
     }
 
-    private MemoryRecords records(long offset, int size) {
+    private MemoryRecords v2RecordWithSize(long offset, int size) {
         return MemoryRecords.withRecords(RecordBatch.MAGIC_VALUE_V2, offset, Compression.NONE, TimestampType.CREATE_TIME,
             new SimpleRecord(new byte[size]));
     }
@@ -697,10 +730,10 @@ public class LogSegmentTest {
         FileRecords fileRecords = FileRecords.open(LogFileUtils.logFile(tempDir, 0));
 
         // Simulate a scenario with log offset range exceeding Integer.MAX_VALUE
-        fileRecords.append(records(0, 1024));
-        fileRecords.append(records(500, 1024 * 1024 + 1));
+        fileRecords.append(v2RecordWithSize(0, 1024));
+        fileRecords.append(v2RecordWithSize(500, 1024 * 1024 + 1));
         long sizeBeforeOverflow = fileRecords.sizeInBytes();
-        fileRecords.append(records(Integer.MAX_VALUE + 5L, 1024));
+        fileRecords.append(v2RecordWithSize(Integer.MAX_VALUE + 5L, 1024));
         long sizeAfterOverflow = fileRecords.sizeInBytes();
 
         try (LogSegment segment = createSegment(0)) {
@@ -723,7 +756,8 @@ public class LogSegmentTest {
         try (LogSegment segment = createSegment(1)) {
             assertEquals(Long.MAX_VALUE, segment.getFirstBatchTimestamp());
 
-            segment.append(1, 1000L, 1, MemoryRecords.withRecords(1, Compression.NONE, new SimpleRecord("one".getBytes())));
+            segment.append(1,
+                MemoryRecords.withRecords(1, Compression.NONE, new SimpleRecord(1000L, "one".getBytes())));
             assertEquals(1000L, segment.getFirstBatchTimestamp());
         }
     }
@@ -760,12 +794,119 @@ public class LogSegmentTest {
         }
     }
 
+    @Test
+    public void testIndexForMultipleBatchesInMemoryRecords() throws IOException {
+        LogSegment segment = createSegment(0, 1, Time.SYSTEM);
+
+        ByteBuffer buffer1 = ByteBuffer.allocate(1024);
+        // append first batch to buffer1
+        MemoryRecordsBuilder builder = MemoryRecords.builder(buffer1, Compression.NONE, TimestampType.CREATE_TIME, 0);
+        builder.append(0L, "key1".getBytes(), "value1".getBytes());
+        builder.close();
+
+        // append second batch to buffer1
+        builder = MemoryRecords.builder(buffer1, Compression.NONE, TimestampType.CREATE_TIME, 1);
+        builder.append(1L, "key1".getBytes(), "value1".getBytes());
+        builder.close();
+
+        buffer1.flip();
+        MemoryRecords record = MemoryRecords.readableRecords(buffer1);
+        segment.append(1L, record);
+
+        ByteBuffer buffer2 = ByteBuffer.allocate(1024);
+        // append first batch to buffer2
+        builder = MemoryRecords.builder(buffer2, Compression.NONE, TimestampType.CREATE_TIME, 2);
+        builder.append(2L, "key1".getBytes(), "value1".getBytes());
+        builder.close();
+
+        buffer2.flip();
+        record = MemoryRecords.readableRecords(buffer2);
+        segment.append(2L, record);
+
+        assertEquals(2, segment.offsetIndex().entries());
+        assertEquals(1, segment.offsetIndex().entry(0).offset());
+        assertEquals(2, segment.offsetIndex().entry(1).offset());
+
+        assertEquals(2, segment.timeIndex().entries());
+        assertEquals(new TimestampOffset(1, 1), segment.timeIndex().entry(0));
+        assertEquals(new TimestampOffset(2, 2), segment.timeIndex().entry(1));
+    }
+
+    @Test
+    public void testNonMonotonicTimestampForMultipleBatchesInMemoryRecords() throws IOException {
+        LogSegment segment = createSegment(0, 1, Time.SYSTEM);
+
+        ByteBuffer buffer1 = ByteBuffer.allocate(1024);
+        // append first batch to buffer1
+        MemoryRecordsBuilder builder = MemoryRecords.builder(buffer1, Compression.NONE, TimestampType.CREATE_TIME, 0);
+        builder.append(1L, "key1".getBytes(), "value1".getBytes());
+        builder.close();
+
+        // append second batch to buffer1
+        builder = MemoryRecords.builder(buffer1, Compression.NONE, TimestampType.CREATE_TIME, 1);
+        builder.append(0L, "key1".getBytes(), "value1".getBytes());
+        builder.close();
+
+        // append third batch to buffer1
+        builder = MemoryRecords.builder(buffer1, Compression.NONE, TimestampType.CREATE_TIME, 2);
+        builder.append(2L, "key1".getBytes(), "value1".getBytes());
+        builder.close();
+
+        buffer1.flip();
+        MemoryRecords record = MemoryRecords.readableRecords(buffer1);
+        segment.append(2L, record);
+
+        assertEquals(2, segment.offsetIndex().entries());
+        assertEquals(1, segment.offsetIndex().entry(0).offset());
+        assertEquals(2, segment.offsetIndex().entry(1).offset());
+
+        assertEquals(2, segment.timeIndex().entries());
+        assertEquals(new TimestampOffset(1, 0), segment.timeIndex().entry(0));
+        assertEquals(new TimestampOffset(2, 2), segment.timeIndex().entry(1));
+    }
+
+    @Test
+    @Timeout(30)
+    public void testConcurrentAccessToMaxTimestampSoFar() throws Exception {
+        int numThreads = 16;
+        ExecutorService executor = Executors.newFixedThreadPool(numThreads);
+        TimeIndex mockTimeIndex = mock(TimeIndex.class);
+        when(mockTimeIndex.lastEntry()).thenReturn(new TimestampOffset(RecordBatch.NO_TIMESTAMP, 0L));
+
+        try {
+            // to reproduce race, we iterate test for certain duration
+            long remainingDurationNanos = Duration.ofSeconds(1).toNanos();
+            while (remainingDurationNanos > 0) {
+                long t0 = System.nanoTime();
+                clearInvocations(mockTimeIndex);
+                try (LogSegment seg = spy(LogTestUtils.createSegment(0, logDir, 10, Time.SYSTEM))) {
+                    when(seg.timeIndex()).thenReturn(mockTimeIndex);
+                    List<Future<?>> futures = new ArrayList<>();
+                    for (int i = 0; i < numThreads; i++) {
+                        futures.add(executor.submit(() -> assertDoesNotThrow(seg::maxTimestampSoFar)));
+                    }
+                    for (Future<?> future : futures) {
+                        future.get();
+                    }
+                    // timeIndex.lastEntry should be called once if no race
+                    verify(mockTimeIndex, times(1)).lastEntry();
+
+                    long elapsedNanos = System.nanoTime() - t0;
+                    remainingDurationNanos -= elapsedNanos;
+                }
+            }
+        } finally {
+            executor.shutdown();
+            executor.awaitTermination(Long.MAX_VALUE, TimeUnit.SECONDS);
+        }
+    }
+
     private ProducerStateManager newProducerStateManager() throws IOException {
         return new ProducerStateManager(
             topicPartition,
             logDir,
             (int) (Duration.ofMinutes(5).toMillis()),
-            new ProducerStateManagerConfig(TransactionLogConfig.PRODUCER_ID_EXPIRATION_MS_DEFAULT, false),
+            new ProducerStateManagerConfig(86400000, false),
             new MockTime()
         );
     }
