@@ -17,28 +17,24 @@
 package org.apache.kafka.tools;
 
 import org.apache.kafka.clients.admin.AdminClientConfig;
-import org.apache.kafka.common.test.api.ClusterInstance;
+import org.apache.kafka.common.test.ClusterInstance;
 import org.apache.kafka.common.test.api.ClusterTest;
-import org.apache.kafka.common.test.api.ClusterTestExtensions;
 import org.apache.kafka.common.test.api.ClusterTests;
 import org.apache.kafka.common.test.api.Type;
 import org.apache.kafka.test.TestUtils;
 
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 
 import java.io.File;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-@ExtendWith(value = ClusterTestExtensions.class)
 class MetadataQuorumCommandTest {
 
     /**
@@ -57,16 +53,16 @@ class MetadataQuorumCommandTest {
             MetadataQuorumCommand.mainNoExit("--bootstrap-server", cluster.bootstrapServers(), "describe", "--replication")
         );
 
-        List<String> outputs = Arrays.stream(describeOutput.split("\n")).collect(Collectors.toList());
+        List<String> outputs = Arrays.stream(describeOutput.split("\n")).toList();
         String header = outputs.get(0);
         List<String> data = outputs.subList(1, outputs.size());
 
         assertTrue(header.matches("NodeId\\s+DirectoryId\\s+LogEndOffset\\s+Lag\\s+LastFetchTimestamp\\s+LastCaughtUpTimestamp\\s+Status\\s+"));
 
-        if (cluster.type() == Type.CO_KRAFT)
-          assertEquals(Math.max(cluster.config().numControllers(), cluster.config().numBrokers()), data.size());
-        else
-          assertEquals(cluster.config().numBrokers() + cluster.config().numControllers(), data.size());
+        if (cluster.type() == Type.CO_KRAFT) 
+            assertEquals(Math.max(cluster.config().numControllers(), cluster.config().numBrokers()), data.size());
+        else 
+            assertEquals(cluster.config().numBrokers() + cluster.config().numControllers(), data.size());
 
         Pattern leaderPattern = Pattern.compile("\\d+\\s+\\S+\\s+\\d+\\s+\\d+\\s+-?\\d+\\s+-?\\d+\\s+Leader\\s*");
         assertTrue(leaderPattern.matcher(data.get(0)).find());
@@ -94,11 +90,17 @@ class MetadataQuorumCommandTest {
         @ClusterTest(brokers = 1, controllers = 2),
     })
     public void testDescribeQuorumStatusSuccessful(ClusterInstance cluster) throws InterruptedException {
+        testDescribeQuorumStatusSuccessful(cluster, false);
+        testDescribeQuorumStatusSuccessful(cluster, true);
+    }
+
+    private void testDescribeQuorumStatusSuccessful(ClusterInstance cluster, boolean usingBootstrapController) throws InterruptedException {
         cluster.waitForReadyBrokers();
+
         String describeOutput = ToolsTestUtils.captureStandardOut(
             () -> MetadataQuorumCommand.mainNoExit(
-                "--bootstrap-server",
-                cluster.bootstrapServers(),
+                usingBootstrapController ? "--bootstrap-controller" : "--bootstrap-server",
+                usingBootstrapController ? cluster.bootstrapControllers() : cluster.bootstrapServers(),
                 "describe",
                 "--status"
             )
@@ -113,7 +115,7 @@ class MetadataQuorumCommandTest {
         assertTrue(outputs[4].matches("MaxFollowerLag:\\s+\\d+"), describeOutput);
         assertTrue(outputs[5].matches("MaxFollowerLagTimeMs:\\s+-?\\d+"), describeOutput);
         assertTrue(
-            outputs[6].matches("CurrentVoters:\\s+\\[\\{\"id\":\\s+\\d+,\\s+\"directoryId\":\\s+\\S+,\\s+" +
+            outputs[6].matches("CurrentVoters:\\s+\\[\\{\"id\":\\s+\\d+,\\s+" +
                 "\"endpoints\":\\s+\\[\"\\S+://\\[?\\S+]?:\\d+\",?.*]"),
             describeOutput
         );
@@ -132,14 +134,25 @@ class MetadataQuorumCommandTest {
 
     @ClusterTest
     public void testOnlyOneBrokerAndOneController(ClusterInstance cluster) {
+        testOnlyOneBrokerAndOneController(cluster, false);
+        testOnlyOneBrokerAndOneController(cluster, true);
+    }
+
+    public void testOnlyOneBrokerAndOneController(ClusterInstance cluster, boolean usingBootstrapController) {
         String statusOutput = ToolsTestUtils.captureStandardOut(() ->
-            MetadataQuorumCommand.mainNoExit("--bootstrap-server", cluster.bootstrapServers(), "describe", "--status")
+            MetadataQuorumCommand.mainNoExit(
+                    usingBootstrapController ? "--bootstrap-controller" : "--bootstrap-server",
+                    usingBootstrapController ? cluster.bootstrapControllers() : cluster.bootstrapServers(),
+                    "describe", "--status")
         );
         assertEquals("MaxFollowerLag:         0", statusOutput.split("\n")[4]);
         assertEquals("MaxFollowerLagTimeMs:   0", statusOutput.split("\n")[5]);
 
         String replicationOutput = ToolsTestUtils.captureStandardOut(() ->
-            MetadataQuorumCommand.mainNoExit("--bootstrap-server", cluster.bootstrapServers(), "describe", "--replication")
+            MetadataQuorumCommand.mainNoExit(
+                    usingBootstrapController ? "--bootstrap-controller" : "--bootstrap-server",
+                    usingBootstrapController ? cluster.bootstrapControllers() : cluster.bootstrapServers(),
+                    "describe", "--replication")
         );
         assertEquals("0", replicationOutput.split("\n")[1].split("\\s+")[3]);
     }
